--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -6,8 +6,12 @@ RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
 
 
 
+php_value upload_max_filesize 128M
 
+php_value post_max_size 128M
 
+php_value max_execution_time 300
 
+php_value max_input_time 300
 
-
+php_value memory_limit 256M
